kube/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-tls
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
spec:
  tls:
  - hosts:
    - api.faruksuljic.com
    secretName: farukstaging
  rules:
  - host: api.faruksuljic.com
    http:
      paths:
      - path: /
        backend:
            serviceName: api-gateway
            servicePort: 80
      - path: /
        backend:
            serviceName: api
            servicePort: 80
